--- a/package.json
+++ b/package.json
@@ -3,11 +3,18 @@
   "version": "1.0.0",
   "description": "Sample of E2E tests written in Playwright with typescript/javascript",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "test": "playwright test"
+  },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.35.1",
+    "@types/node": "^18.11.9",
+    "@types/serve-handler": "^6.1.1",
     "typescript": "^5.1.3"
+  },
+  "dependencies": {
+    "dotenv": "^16.3.1"
   }
 }
