--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "tests",
+  "name": "e2e_tests",
   "version": "1.0.0",
   "description": "Sample of E2E tests written in Playwright with typescript/javascript",
-  "main": "index.js",
+  "main": "login.spec.ts",
+  "private": true,
   "scripts": {
     "test": "playwright test"
   },
@@ -15,6 +16,7 @@
     "typescript": "^5.1.3"
   },
   "dependencies": {
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "playwright": "^1.29.1"
   }
 }
