--- a/package.json
+++ b/package.json
@@ -7,13 +7,21 @@
   "scripts": {
     "test": "playwright test"
   },
-  "author": "",
+  "author": "Mateusz Tokarski",
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.35.1",
     "@types/node": "^18.11.9",
     "@types/serve-handler": "^6.1.1",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "@typescript-eslint/eslint-plugin": "^5.40.1",
+    "eslint": "^8.25.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-config-standard-with-typescript": "^23.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.3.0",
+    "eslint-plugin-playwright": "^0.11.2",
+    "eslint-plugin-prettier": "^4.2.1"
   },
   "dependencies": {
     "dotenv": "^16.3.1",
