--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -8,7 +8,8 @@ jobs:
   test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
-    run: working-directory ./
+    run: 
+      working-directory: ./
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-node@v3
