--- a/package.json
+++ b/package.json
@@ -1,13 +1,30 @@
 {
-  "name": "tests",
+  "name": "e2e_tests",
   "version": "1.0.0",
   "description": "Sample of E2E tests written in Playwright with typescript/javascript",
-  "main": "index.js",
-  "scripts": {},
-  "author": "",
+  "main": "login.spec.ts",
+  "private": true,
+  "scripts": {
+    "test": "playwright test"
+  },
+  "author": "Mateusz Tokarski",
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.35.1",
-    "typescript": "^5.1.3"
+    "@types/node": "^18.11.9",
+    "@types/serve-handler": "^6.1.1",
+    "typescript": "^5.1.3",
+    "@typescript-eslint/eslint-plugin": "^5.40.1",
+    "eslint": "^8.25.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-config-standard-with-typescript": "^23.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.3.0",
+    "eslint-plugin-playwright": "^0.11.2",
+    "eslint-plugin-prettier": "^4.2.1"
+  },
+  "dependencies": {
+    "dotenv": "^16.3.1",
+    "playwright": "^1.29.1"
   }
 }
