--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "private": true,
     "scripts": {
         "test": "playwright test",
-        "format": "npx prettier --write ."
+        "format": "npx prettier --write .",
+        "lint": "npx eslint . --ext .ts --max-warnings=0"
     },
     "author": "Mateusz Tokarski",
     "license": "ISC",
@@ -15,8 +16,9 @@
         "@types/node": "^18.11.9",
         "@types/serve-handler": "^6.1.1",
         "@typescript-eslint/eslint-plugin": "^5.40.1",
+        "@typescript-eslint/parser": "6.20.0",
         "eslint": "^8.25.0",
-        "eslint-config-prettier": "^8.6.0",
+        "eslint-config-prettier": "^8.10.0",
         "eslint-config-standard-with-typescript": "^23.0.0",
         "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-n": "^15.3.0",
