--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "@types/node": "^18.11.9",
         "@types/serve-handler": "^6.1.1",
         "@typescript-eslint/eslint-plugin": "^5.40.1",
-        "@typescript-eslint/parser": "6.20.0",
+        "@typescript-eslint/parser": "^6.20.0",
         "eslint": "^8.25.0",
         "eslint-config-prettier": "^8.10.0",
         "eslint-config-standard-with-typescript": "^23.0.0",
