--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,8 @@
     },
     "plugins": ["@typescript-eslint", "prettier"],
     "rules": {
-        "@typescript-eslint/no-non-null-assertion": "off"
+        "@typescript-eslint/explicit-function-return-type": "error",
+        "no-console": "warn",
+        "prettier/prettier": "warn"
     }
 }
