--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "scripts": {
         "test": "playwright test",
         "format": "npx prettier --write .",
-        "lint": "npx eslint . --ext .ts --max-warnings=0"
+        "lint": "npx eslint . --ext .ts --max-warnings=0",
+        "release": "standard-version"
     },
     "author": "Mateusz Tokarski",
     "license": "ISC",
@@ -22,6 +23,7 @@
         "eslint-plugin-playwright": "^0.22.2",
         "eslint-plugin-prettier": "^5.1.3",
         "prettier": "3.2.5",
+        "standard-version": "^9.5.0",
         "typescript": "^5.1.3"
     },
     "dependencies": {
