--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "scripts": {
         "test": "playwright test",
         "format": "npx prettier --write .",
-        "lint": "npx eslint . --ext .ts --max-warnings=0",
-        "release": "standard-version"
+        "lint": "npx eslint . --ext .ts --max-warnings=0"
     },
     "author": "Mateusz Tokarski",
     "license": "ISC",
