--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,21 +3,85 @@
         "es2021": true,
         "node": true
     },
+    "parser": "@typescript-eslint/parser",
     "extends": [
         "eslint:recommended",
         "plugin:@typescript-eslint/recommended",
         "plugin:playwright/playwright-test",
-        "prettier"
+        "prettier",
+        "plugin:jsdoc/recommended-typescript-error"
     ],
-    "parser": "@typescript-eslint/parser",
+    "plugins": [
+        "@typescript-eslint",
+        "prettier",
+        "jsdoc",
+        "eslint-plugin-tsdoc"
+    ],
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
     },
-    "plugins": ["@typescript-eslint", "prettier"],
     "rules": {
+        "prettier/prettier": "error",
+        "playwright/prefer-lowercase-title": [
+            "error",
+            {
+                "ignore": ["test.describe", "test"],
+                "ignoreTopLevelDescribe": true
+            }
+        ],
+        "playwright/no-standalone-expect": "off",
+        "playwright/no-conditional-expect": "off",
+        "@typescript-eslint/no-explicit-any": "error",
+        "@typescript-eslint/no-unused-vars": [
+            "error",
+            { "varsIgnorePattern": "^_", "argsIgnorePattern": "^_" }
+        ],
+        "@typescript-eslint/no-empty-interface": "error",
+        "@typescript-eslint/no-use-before-define": "error",
+        "@typescript-eslint/prefer-for-of": "error",
         "@typescript-eslint/explicit-function-return-type": "error",
+        "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }],
+        "camelcase": ["error", { "properties": "never" }],
         "no-console": "warn",
-        "prettier/prettier": "warn"
-    }
+        "no-var": "error",
+        "no-unused-expressions": ["error", { "allowTernary": true }],
+        "class-methods-use-this": "error",
+        "require-await": "error",
+        "tsdoc/syntax": "error",
+        "jsdoc/require-jsdoc": [
+            "error",
+            {
+                "contexts": [
+                    "ClassDeclaration",
+                    "ClassProperty",
+                    "FunctionDeclaration",
+                    "MethodDefinition"
+                ],
+                "enableFixer": false
+            }
+        ],
+        "jsdoc/require-description": [
+            "error",
+            {
+                "contexts": ["ClassDeclaration", "MethodDefinition"]
+            }
+        ],
+        "jsdoc/require-description-complete-sentence": 1,
+        "jsdoc/require-hyphen-before-param-description": 1,
+        "jsdoc/no-blank-block-descriptions": 1,
+        "jsdoc/check-indentation": 1,
+        "jsdoc/check-line-alignment": 1,
+        "jsdoc/no-types": 1
+    },
+    "settings": {
+        "import/parsers": {
+            "@typescript-eslint/parser": [".ts"]
+        },
+        "import/resolver": {
+            "typescript": true,
+            "node": true
+        }
+    },
+    "ignorePatterns": ["node_modules/*"]
 }
