--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "scripts": {
         "test": "playwright test",
         "format": "npx prettier --write .",
-        "lint": "npx eslint . --ext .ts --max-warnings=0"
+        "lint": "npx eslint . --ext .ts --max-warnings=0",
+        "typedoc": "typedoc"
     },
     "author": "Mateusz Tokarski",
     "license": "ISC",
@@ -21,9 +22,13 @@
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-playwright": "^0.22.2",
         "eslint-plugin-prettier": "^5.1.3",
+        "eslint-plugin-tsdoc": "^0.3.0",
+        "eslint-plugin-jsdoc": "^50.2.2",
         "prettier": "3.2.5",
         "standard-version": "^9.5.0",
-        "typescript": "^5.1.3"
+        "typescript": "^5.1.3",
+        "typedoc": "^0.26.6",
+        "typedoc-plugin-missing-exports": "^3.0.0"
     },
     "dependencies": {
         "dotenv": "^16.3.1",
