--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
         "eslint-plugin-prettier": "^5.1.3",
         "prettier": "3.2.5",
         "standard-version": "^9.5.0",
-        "typescript": "^5.1.3"
+        "typescript": "^5.1.3",
+        "eslint-plugin-tsdoc": "^0.3.0",
+        "eslint-plugin-jsdoc": "^50.2.2",
+        "typedoc": "^0.26.6"
     },
     "dependencies": {
         "dotenv": "^16.3.1",
