--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "scripts": {
         "test": "playwright test",
         "format": "npx prettier --write .",
-        "lint": "npx eslint . --ext .ts --max-warnings=0"
+        "lint": "npx eslint . --ext .ts --max-warnings=0",
+        "typedoc": "typedoc"
     },
     "author": "Mateusz Tokarski",
     "license": "ISC",
