--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,7 +1,7 @@
 name: Playwright Tests
-on:
-    push:
-        branches: [main, master]
+
+'on': [push]
+
 jobs:
     run_e2e:
         timeout-minutes: 60
