--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
         "typescript": "^5.1.3",
         "eslint-plugin-tsdoc": "^0.3.0",
         "eslint-plugin-jsdoc": "^50.2.2",
-        "typedoc": "^0.26.6"
+        "typedoc": "^0.26.6",
+        "knip": "^5.24.3"
     },
     "dependencies": {
         "dotenv": "^16.3.1",
