--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "knip": "^5.24.3",
         "prettier": "3.2.5",
         "typedoc": "^0.26.6",
+        "typedoc-plugin-missing-exports": "^3.0.0",
         "typescript": "^5.1.3"
     },
     "dependencies": {
